[package]
name = "lakefs_datafusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { git = "https://github.com/apache/datafusion", branch = "main"}
datafusion-common = { git = "https://github.com/apache/datafusion", branch = "main", package = "datafusion-common"}
dotenv = { version = "0.15.0" }
object_store = { version = "0.9.1", features = ["aws"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
url = { version = "2.5.0" }
